--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "prettier --check . && eslint .",
     "format": "prettier --write .",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "deploy": "gh-pages -d build -t true"
   },
   "devDependencies": {
     "@babel/core": "^7.19.1",
@@ -32,6 +33,7 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-storybook": "^0.6.4",
     "eslint-plugin-svelte3": "^4.0.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "svelte": "^3.50.1",
