--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@storybook/svelte": "^6.5.12",
     "@storybook/testing-library": "^0.0.13",
     "@sveltejs/adapter-auto": "next",
+    "@sveltejs/adapter-static": "^1.0.0-next.43",
     "@sveltejs/kit": "next",
     "@sveltejs/package": "next",
     "@typescript-eslint/eslint-plugin": "^5.27.0",
